<resources>
    <string name="app_name">BusyMama</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">Busy Mama</string>

    <string name="action_settings">Settings</string>
    <string name="expenses_tab">Activity</string>
    <string name="my_places_tab">My Places</string>
    <string name="settings_tab">Settings</string>

    <string name="expense_reminder_notification_title">Busy Mama</string>
    <string name="expense_reminder_notification_body">You are near a store. Remember to add your expense.</string>
    <string name="main_notification_channel_name" translatable="false">expense_reminder</string>

    <string name="add_new_location">Add new location</string>
    <string name="location_list">Locations</string>
    <string name="need_location_permission_message">You need to enable location permissions first</string>
    <string name="location_permissions_granted_message">Location Permissions Granted</string>
    <string name="setting_enabled" translatable="false">EnabledSetting</string>
    <string name="settings_label">Settings</string>
    <string name="location_permissions">Location Permissions</string>
    <string name="enable_geofences">Enable Geofences</string>
    <string name="privacy">http://www.google.com/policies/privacy</string>
    <string name="need_enable_geofences">You need to enable Geofences first</string>

    <!-- Login -->
    <string name="hint_username">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_next">Login</string>
    <string name="button_get_registered">Register</string>
    <string name="button_cancel">Cancel</string>
    <!-- Auth error strings -->
    <string name="error_email">Email address is required.</string>
    <string name="error_invalid_email">Enter a valid email.</string>
    <string name="error_empty_password">Password is required.</string>
    <string name="error_password">Password must contain at least 8 characters.</string>

    <!-- Sign up -->
    <string name="button_register">Register</string>

    <string name="dashboard_screen">Dashboard</string>

    <!-- Expense placeholder text -->
    <string name="item_title">Whole Foods</string>
    <string name="item_description">2670 Broadway, Boulder, CO 80304, USA.
    </string>
    <string name="item_date">08/229/2019 07:37:59 PM</string>
    <string name="item_empty">Add some transactions to get started!</string>

    <!-- Text input placeholders -->
    <string name="transaction_input_label">Add New Transaction</string>
    <string name="transaction_input_placeholder">Amount</string>
    <string name="action_geolocate">Pick Place</string>

    <!-- Transaction history tools text -->
    <string name="transaction_amount">$5.00</string>
    <string name="transaction_date_time">08/17/2019 09:21 43 AM</string>
    <string name="transaction_place">Whole Foods</string>
    <string name="transaction_location">"Whole foods"</string>

    <!-- Transaction detail -->
    <string name="transaction_detail_screen_title">Transaction Detail</string>
    <string name="transaction_detail_label_title">Details</string>
    <string name="transaction_detail_location_title">Location</string>
    <string name="transaction_amount_label">Amount</string>
    <string name="transaction_date_time_label">Date</string>
    <string name="empty_text_error">Please enter a valid amount</string>


    <!-- Geofences Buttons strings -->
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="geofence_success">Geofence added</string>

    <!-- Geofences Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="unknown_error">Something unexpected happened. Please try again.</string>

    <!-- Geofences Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <!-- Location strings -->
    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>

    <!-- Menu Strings -->
    <string name="logout_label">Log Out</string>
    <string name="home_label">Home</string>

    <!-- Accessibility -->
    <string name="logo_description">Busy Mama logo</string>
    <string name="geofencing_icon_description">Activate geofences icon</string>
    <string name="google_attribution_icon_description">Google attribution icon</string>
    <string name="widget_dollar_icon">Dollar icon</string>
    <string name="place_image_description">Place image</string>

    <!-- App widget -->
    <string name="appwidget_text">LAST TRANSACTION</string>
    <string name="appwidget_amount_description">Transaction amount</string>
    <string name="appwidget_transaction_amount">0.00</string>
    <string name="appwidget_placeholder_amount">0.00</string>
    <string name="add_widget">Add widget</string>

</resources>
