<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/transaction_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/transaction_detail_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/transaction_detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/md_keylines">

            <TextView
                android:id="@+id/description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/md_keylines"
                android:text="@string/transaction_detail_label_title"
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                android:textColor="?attr/colorPrimaryDark" />

            <TextView
                android:id="@+id/amount_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description_label"
                android:layout_marginEnd="@dimen/md_keylines"
                android:text="@string/transaction_amount_label"
                android:textAppearance="@android:style/TextAppearance.Material.SearchResult.Subtitle"
                android:textColor="?attr/colorAccent" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/description_label"
                android:layout_marginBottom="@dimen/md_keylines"
                android:layout_toEndOf="@+id/amount_label"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                android:textColor="?attr/colorPrimary"
                tools:text="@string/transaction_amount" />

            <TextView
                android:id="@+id/date_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/amount"
                android:layout_marginEnd="@dimen/md_keylines"
                android:text="@string/transaction_date_time_label"
                android:textAppearance="@android:style/TextAppearance.Material.SearchResult.Subtitle"
                android:textColor="?attr/colorPrimary" />

            <TextView
                android:id="@+id/date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/amount"
                android:layout_marginBottom="@dimen/md_keylines"
                android:layout_toEndOf="@+id/date_time_label"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                tools:text="@string/transaction_date_time" />


            <TextView
                android:id="@+id/location_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date_time"
                android:layout_marginBottom="@dimen/md_keylines"
                android:text="@string/transaction_detail_location_title"
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                android:textColor="?attr/colorPrimaryDark" />

            <TextView
                android:id="@+id/transaction_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/location_label"
                android:textAppearance="@android:style/TextAppearance.Material.Body2"
                tools:text="@string/transaction_location" />

        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>