<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="@dimen/margin_padding_size_large"
        android:paddingTop="@dimen/margin_padding_size_medium">

        <ImageView
            android:layout_width="@dimen/logo_size_large"
            android:layout_height="@dimen/logo_size_large"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_padding_size_large"
            android:layout_marginBottom="@dimen/margin_padding_size_medium"
            android:contentDescription="@string/logo_description"
            android:tint="?android:attr/textColorPrimary"
            app:srcCompat="@drawable/ic_oven_mitt_dark" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_padding_sixe_xxxlarge"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_size_xsmall"
            android:hint="@string/hint_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/button_register" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_padding_size_medium"
                android:layout_toStartOf="@id/signup_button"
                android:text="@string/button_cancel" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/progress_indicator_width"
            android:layout_height="@dimen/progress_indicator_height"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="@dimen/margin_padding_size_large"
            android:visibility="gone" />

    </LinearLayout>


</ScrollView>