<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/transaction_list_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?android:attr/selectableItemBackground"
    android:padding="@dimen/md_keylines">


    <TextView
        android:id="@+id/transaction_amount"
        android:layout_width="@dimen/amount_width"
        android:layout_height="wrap_content"
        tools:text="@string/transaction_amount"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="@dimen/article_subheading" />

    <TextView
        android:id="@+id/transaction_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/md_keylines"
        android:layout_toEndOf="@+id/transaction_amount"
        tools:text="@string/item_date"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="@dimen/article_subheading" />

    <TextView
        android:id="@+id/transaction_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/transaction_detail"
        android:layout_marginStart="@dimen/md_keylines"
        android:layout_toEndOf="@+id/transaction_amount"
        android:textColor="@color/colorPrimaryDark"
        android:ellipsize="end"
        android:singleLine="true"
        tools:text="@string/transaction_place"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="@dimen/list_body" />
</RelativeLayout>
