<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_padding_size_large"
        android:layout_marginLeft="@dimen/md_keylines"
        android:layout_marginRight="@dimen/md_keylines"
        android:layout_marginTop="@dimen/margin_padding_size_large"
        android:orientation="vertical">


        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/divider"
            android:layout_marginTop="@dimen/margin_padding_size_xsmall"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_padding_size_small"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_padding_size_xsmall"
                android:paddingEnd="@dimen/margin_padding_size_small"
                android:paddingStart="@dimen/margin_padding_size_xsmall"
                android:paddingTop="@dimen/margin_padding_size_xsmall"
                android:src="@drawable/ic_public_black_24dp"
                android:contentDescription="@string/geofencing_icon_description"/>

            <Switch
                android:id="@+id/enable_switch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/enable_geofences"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>


        <Button
            android:id="@+id/add_location_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="@dimen/margin_padding_size_large"
            android:text="@string/add_new_location"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@android:color/white" />


        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/divider"
            android:layout_marginTop="@dimen/margin_padding_size_xsmall"
            android:background="@color/colorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/margin_padding_size_small"
            android:src="@drawable/ic_geolocation_primary"
            android:contentDescription="@string/google_attribution_icon_description"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:paddingBottom="@dimen/margin_padding_size_small"
            android:layout_marginBottom="@dimen/margin_padding_size_medium"
            android:text="@string/privacy"
            android:textAlignment="center" />
    </LinearLayout>

</RelativeLayout>